--- a/Prácticas/Práctica 2/bgpatron/styles.css
+++ b/Prácticas/Práctica 2/bgpatron/styles.css
@@ -3,7 +3,7 @@
 
 body {
     background-color:rgb(41, 91, 218);
-    background-image: url("img/formula.png");
+    background-image: url("img/pattern.jpg");
  }
 
  #contenido {
